Bug 426943 - Composer settings dialog: Word wrap at column is limited to 78
Summary: Composer settings dialog: Word wrap at column is limited to 78
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: config dialog (other bugs)
Version First Reported In: 5.15.1
Platform: openSUSE Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-09-25 07:44 UTC by Gerhard
Modified: 2020-10-27 06:18 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.16.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Gerhard 2020-09-25 07:44:22 UTC
SUMMARY
Behind the item "Word wrap at column" in the settings dialogue of the email composer there's a spin box. The range of values you can enter is limited to 78 which is too small number.

STEPS TO REPRODUCE
1. open Configure, select composer
2. click check box "Word wrap at column"
3. try to increase value beyond 78

OBSERVED RESULT
stays at 78

EXPECTED RESULT
Reasonable limit would be maybe 200

Linux/KDE Plasma: openSUSE Tumbleweed
KDE Plasma Version: 5.19.5
KDE Frameworks Version: 5.74.0
Qt Version: 5.15.1
Comment 1 Laurent Montel 2020-10-27 06:18:50 UTC
Git commit a9a5548cfb5d97605ceca8f42549ab27e672975b by Laurent Montel.
Committed on 27/10/2020 at 06:18.
Pushed by mlaurent into branch 'master'.

Fix Bug 426943 - Composer settings dialog: Word wrap at column is limited to 78
FIXED-IN: 5.16.0

M  +1    -1    src/configuredialog/configurecomposerpage.cpp

https://invent.kde.org/pim/kmail/commit/a9a5548cfb5d97605ceca8f42549ab27e672975b