Fix Bug 426943 - Composer settings dialog: Word wrap at column is limited to 78

BUG: 426943
FIXED-IN: 5.16.0